pushing the changes related to setting up basic and few gestures