@@ -3,6 +3,7 @@ package appiumPractise;
 import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.Duration;
 
@@ -25,9 +26,10 @@ public class BaseTest {
 	public AppiumDriverLocalService service;
 
 	@BeforeClass
-	public void configureAppium() throws MalformedURLException {
+	public void configureAppium() throws MalformedURLException, URISyntaxException {
 
-		// Starting Appium server programmatically
+		// Starting Appium server programatically
+
 		service = new AppiumServiceBuilder()
 				.withAppiumJS(new File(
 						"C:\\Users\\Aravind\\AppData\\Roaming\\npm\\node_modules\\appium\\build\\lib\\main.js"))
@@ -35,28 +37,29 @@ public class BaseTest {
 
 		service.start(); // To start appium server
 
-		// Setting the Capabilities
 		UiAutomator2Options options = new UiAutomator2Options();
-		// options.setDeviceName("10BE1Y0BZM0012Y");
+		//options.setDeviceName("10BE1Y0BZM0012Y");
 		options.setDeviceName("AravindEmulator");
 		options.setPlatformName("Android");
-	//	options.setChromedriverExecutable("C:\\Users\\Aravind\\git\\Appium\\Appium\\src\\test\\java\\resources\\chromedriver.exe");
-
-		 options.setApp("C:\\Users\\Aravind\\git\\Appium\\Appium\\src\\test\\java\\resources\\ApiDemos-debug.apk");
-		//options.setApp("C:\\Users\\Aravind\\git\\Appium\\Appium\\src\\test\\java\\resources\\General-Store.apk");
+		options.setApp("C:\\Users\\Aravind\\git\\Appium\\Appium\\src\\test\\java\\resources\\ApiDemos-debug.apk");
 
 		// Android device or ios device
 		// appium code --> appium server
-		URL appiumServerUrl = URI.create("http://127.0.0.1:4723").toURL();
-		driver = new AndroidDriver(appiumServerUrl, options);
-		driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+		
+         URL appiumserverurl = URI.create("http://127.0.0.1:4723").toURL(); 
+		 driver=new AndroidDriver(appiumserverurl,options);
+		 driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+       
+		 
+		 //driver=new AndroidDriver(new URI("http://127.0.0.1:4723").toURL(),options);
+		//driver = new AndroidDriver(new URL("http://127.0.0.1:4723"), options);  // if java version is less than 20 version this will work above java 20 version use URI class
 
 	}
 
 	public void longPressAction(WebElement ele) {
-		((JavascriptExecutor) driver).executeScript("mobile: longClickGesture",
-				ImmutableMap.of("elementId", ((RemoteWebElement) ele).getId(), "duration", 2000));
-
+		
+		((JavascriptExecutor)driver).executeScript("mobile:longClickGesture",
+				ImmutableMap.of("elementId",((RemoteWebElement)ele).getId(),"duration",2000));
 	}
 
 	public void swipeAction(WebElement ele, String direction) {
@@ -87,8 +90,9 @@ public class BaseTest {
 
 	@AfterClass
 	public void tearDown() {
+
 		driver.quit();
-		service.stop();  // to stop the appium server
+		service.stop(); // to stop the appium server
 
 	}
 
